# felipevillegas

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml  railpack.json  railway.json  tailwind.config.js
.github/workflows/: ci.yml
assets/css/: input.css
config/: urls.py
config/settings/: base.py  dev.py  production.py
contact/: models.py
contact/migrations/: 0001_initial.py
contact/templates/contact/: contact_page.html
core/: views.py
home/: models.py
home/management/commands/: create_initial_pages.py  populate_home_page.py  populate_seo.py
home/migrations/: 0001_initial.py
home/templates/home/: home_page.html
photography/: models.py
photography/migrations/: 0001_initial.py
photography/templates/photography/: gallery_page.html  photography_index_page.html
static/css/: input.css
static/images/: site.webmanifest
templates/: 404.html  500.html  base.html
users/migrations/: 0001_initial.py
work/: models.py
work/management/commands/: populate_projects.py
work/migrations/: 0001_initial.py
work/templates/work/: project_page.html  work_index_page.html
